--- a/Bootstrap/css/style.css
+++ b/Bootstrap/css/style.css
@@ -29,3 +29,8 @@
     background-color: rgb(140, 204, 204);
 }
 
+.tovar{
+    background-color: brown;
+    color: rgb(44, 44, 119);
+    text-align: center;
+}
