--- a/Bootstrap/css/style.css
+++ b/Bootstrap/css/style.css
@@ -35,7 +35,7 @@
     text-align: center;
 }
 
-.cell1{
+.cell{
     background-color: rgb(151, 96, 23);
     color: rgb(8, 8, 7);
     height: 200px;
