исправление нижних товаров

--- a/Bootstrap/css/style.css
+++ b/Bootstrap/css/style.css
@@ -42,9 +42,9 @@
 }
 
 .cell1{
-    background-color: rgb(104, 77, 43);
-    color: rgb(9, 12, 12);
-    text-align: center;
+    background-color: rgb(151, 96, 23);
+    color: rgb(8, 8, 7);
+    height: 200px;
 }
 
 .footer{
