--- a/Bootstrap/css/style.css
+++ b/Bootstrap/css/style.css
@@ -1,54 +1,23 @@
+*{
+    margin: 0;
+}
+.block{
+    border: 1px solid white;
+    text-align: center;
+    background-color: orange;
+    padding-bottom: 30px;
+}
+.block_h{
+    
+   
+    background-color: orange;
+   
+}
 .header{
-    background-color:rgb(156, 187, 176);
-    color:rgb(10, 2, 17);
-    text-align: center;
-}
-
-.header1{
-    background-color:rgb(217, 255, 127);
-    color:rgb(8, 1, 10);
-    text-align: center;
-}
-
-.header2{
-    background-color:rgb(211, 200, 105);
-    color:rgb(16, 17, 3);
-    text-align: center;
-}
-
-.photo{
-    background-color:rgb(156, 182, 42);
-    color:rgb(16, 6, 17);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 200px;
-}
-
-.content{
-    background-color: rgb(140, 179, 179);
-}
-
-.tovar{
-    background-color: rgb(175, 116, 116);
-    color: rgb(7, 7, 12);
-    text-align: center;
-}
-
-.cell{
-    background-color: rgb(151, 96, 23);
-    color: rgb(8, 8, 7);
-    height: 200px;
-}
-
-.cell1{
-    background-color: rgb(151, 96, 23);
-    color: rgb(8, 8, 7);
-    height: 200px;
-}
-
-.footer{
-    background-color: rgb(84, 125, 185);
-    color: black;
-    text-align: center;
+    color: white;
+    text-align: left;
+    background-color: rgba(255, 166, 0, 0.795);
+    padding-bottom: 30px; 
+    border: 1px solid white;
+    font-size: 30px;  
 }
