--- a/Bootstrap/css/style.css
+++ b/Bootstrap/css/style.css
@@ -1,23 +1,54 @@
-*{
-    margin: 0;
-}
-.block{
-    border: 1px solid white;
-    text-align: center;
-    background-color: orange;
-    padding-bottom: 30px;
-}
-.block_h{
-    
-   
-    background-color: orange;
-   
-}
 .header{
-    color: white;
-    text-align: left;
-    background-color: rgba(255, 166, 0, 0.795);
-    padding-bottom: 30px; 
-    border: 1px solid white;
-    font-size: 30px;  
+    background-color: #7311f2;
+    color: aqua;
+    text-align: center;
+}
+
+.header1{
+    background-color: #3a078c;
+    color: orangered;
+    text-align: center;
+}
+
+.header2{
+    background-color: #3a078c;
+    color: orangered;
+    text-align: center;
+}
+
+.photo{
+    background-color: #f3a2fa;
+    color: #2c0855;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+}
+
+.content{
+    background-color: brown;
+}
+
+.tovar{
+    background-color: aqua;
+    color: #0c0480;
+    text-align: center;
+}
+
+.cell{
+    background-color: #0c0480;
+    color: aliceblue;
+    height: 200px;
+}
+
+.cell1{
+    background-color: #0c0480;
+    color: aliceblue;
+    height: 200px;
+}
+
+.footer{
+    background-color: #7311f2;
+    color: aqua;
+    text-align: center;   
 }
